<resources>
    <string name="app_name">MediStore</string>
    <string name="hint_login_username">Username or Email or Phone</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="hint_home_search">Search Medicine</string>
    <string name="title_add_reminder">Add Reminder</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="medicine_category">Medicine Category</string>
    <string name="medicine_type">Medicine Type</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="alert_on">Alert On</string>
    <string name="one_day_before">One Day Before</string>
    <string name="one_week_before">One Week Before</string>
    <string name="one_month_before">One Month Before</string>
    <string name="two_months_before">Two Months Before</string>
    <string name="three_months_before">Three Months Before</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="rectangle">rectangle</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="error_phone">Invalid phone number</string>
    <string name="error_username_min_length">Minimum length is 4</string>
    <string name="error_username_max_length">Maximum length 25</string>
    <string name="error_username_empty">Required Field</string>
    <string name="error_email_invalid">Invalid email</string>
    <string name="error_password_min_length">Password is too short</string>//Min. Length is 6
    characters.
    <string name="error_confirm_password">Confirm password not match</string>
    <string name="home">Home</string>
    <string name="reminders">Reminders</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="business_name">Business Name</string>
    <string name="address">Address</string>
    <string name="add_product">Add Product</string>
    <string name="protency">Protency</string>
    <string name="add_employee">Add Employee</string>
    <string name="is_athical">Is Athical</string>
    <string name="salt_name">Salt Name</string>
    <string name="potency">Potency</string>
    <string name="potency_type">Potency Type</string>
    <string name="manufacture_by">Manufacture By</string>
    <string name="marketing_by">Marketing By</string>
    <string name="qty_per_piece">Qty Per Piece</string>

</resources>