<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textTitleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/medicine_name"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        android:text="Medicine Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textTitleName"
        app:layout_constraintTop_toBottomOf="@id/textTitleName"/>

    <TextView
        android:id="@+id/textTitleIsAthical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/is_athical"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/textName"
        app:layout_constraintTop_toBottomOf="@id/textName" />

    <TextView
        android:id="@+id/textIsAthical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        android:text="Yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textTitleIsAthical"
        app:layout_constraintTop_toBottomOf="@id/textTitleIsAthical"/>

    <TextView
        android:id="@+id/textTitleMedicineCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/medicine_category"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/textName"
        app:layout_constraintTop_toBottomOf="@id/textIsAthical" />

    <TextView
        android:id="@+id/textMedicineCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        android:text="Allopathic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textTitleMedicineCategory"
        app:layout_constraintTop_toBottomOf="@id/textTitleMedicineCategory"/>

    <TextView
        android:id="@+id/textTitleMedicineType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/medicine_type"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/textName"
        app:layout_constraintTop_toBottomOf="@id/textMedicineCategory" />

    <TextView
        android:id="@+id/textMedicineType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        android:text="Tablet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textTitleMedicineType"
        app:layout_constraintTop_toBottomOf="@id/textTitleMedicineType"/>

    <TextView
        android:id="@+id/textTitleSaltName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/salt_name"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/textName"
        app:layout_constraintTop_toBottomOf="@id/textMedicineType" />

    <TextView
        android:id="@+id/textSaltName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        android:text="Salt Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textTitleSaltName"
        app:layout_constraintTop_toBottomOf="@id/textTitleSaltName"/>

    <TextView
        android:id="@+id/textTitlePotency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/potency"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/textTitleSaltName"
        app:layout_constraintTop_toBottomOf="@id/textSaltName" />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="@id/textSaltName"
        app:layout_constraintEnd_toEndOf="@id/textSaltName"
        app:layout_constraintTop_toBottomOf="@id/textSaltName"/>

    <TextView
        android:id="@+id/textTitlePotencyType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/potency_type"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/viewDivider"
        app:layout_constraintTop_toTopOf="@id/textTitlePotency" />







</androidx.constraintlayout.widget.ConstraintLayout>